force-app/main/default/objects/Onboard_Request__c/Onboard_Request__c.object-meta.xml
<CustomObject>
    <label>Onboard Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>