force-app/main/default/objects/Onboard_Request__c/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <formula>IF(ISBLANK(Account_Name__r.BillingStreet),&apos;&apos;,Account_Name__r.BillingStreet + &apos;,&apos;) +
IF(ISBLANK(Account_Name__r.BillingCity),&apos;&apos;,Account_Name__r.BillingCity + &apos;,&apos;) +
IF(ISBLANK(Account_Name__r.BillingState),&apos;&apos;,Account_Name__r.BillingState + &apos;,&apos;) +
IF(ISBLANK(Account_Name__r.BillingPostalCode),&apos;&apos;,Account_Name__r.BillingPostalCode + &apos;,&apos;) +
IF(ISBLANK(Account_Name__r.BillingCountry),&apos;&apos;,Account_Name__r.BillingCountry)</formula>
    <label>Account Billing Address</label>
    <type>Text</type>
</CustomField>