force-app/main/default/objects/Onboard_Request__c/fields/Account_Department__c.field-meta.xml
<CustomField>
    <fullName>Account_Department__c</fullName>
    <description>This is to capture account department and which is used in initial approval biz flow configurations</description>
    <formula>IF(INCLUDES(Account_Name__r.Department__c, &quot;Dubai Logistic City&quot;), &quot;Dubai Logistic City&quot;, IF(INCLUDES(Account_Name__r.Department__c, &quot;Aviation City&quot;), &quot;Aviation City&quot;,
IF(INCLUDES(Account_Name__r.Department__c, &quot;Business Park&quot;), &quot;Business Park&quot;,
IF(INCLUDES(Account_Name__r.Department__c, &quot;Business Center&quot;), &quot;Business Center&quot;, &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Department</label>
    <type>Text</type>
</CustomField>