force-app/main/default/objects/Onboard_Request__c/fields/Account_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Name__c</fullName>
    <description>Account_Name__r.Record_Type_Name__c</description>
    <formula>&apos;s&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type Name</label>
    <type>Text</type>
</CustomField>