force-app/main/default/objects/Onboard_Request__c/fields/Action_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Template</label>
    <referenceTo>acbox__Action_Template__c</referenceTo>
    <relationshipName>Onboard_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>