force-app/main/default/objects/Onboard_Request__c/fields/Action_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Action_Template_Id__c</fullName>
    <formula>Action_Template__r.acbox__Record_18_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action_Template_Id</label>
    <type>Text</type>
</CustomField>