force-app/main/default/objects/Onboard_Request__c/fields/Action_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Template_Name__c</fullName>
    <formula>Action_Template__r.Name</formula>
    <label>Action Template Name</label>
    <type>Text</type>
</CustomField>