force-app/main/default/objects/Onboard_Request__c/fields/Action_Template_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Template_Unique_Code__c</fullName>
    <formula>Action_Template__r.acbox__Unique_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Template Unique Code</label>
    <type>Text</type>
</CustomField>