force-app/main/default/objects/Onboard_Request__c/fields/Active_Operating_Location__c.field-meta.xml
<CustomField>
    <fullName>Active_Operating_Location__c</fullName>
    <label>Active Operating Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sub Lease</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>