force-app/main/default/objects/Onboard_Request__c/fields/Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact__c</fullName>
    <label>Additional Contact</label>
    <type>Phone</type>
</CustomField>