force-app/main/default/objects/Onboard_Request__c/fields/Air_Freight__c.field-meta.xml
<CustomField>
    <fullName>Air_Freight__c</fullName>
    <label>Air Freight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year 1- 2,200</fullName>
            </value>
            <value>
                <fullName>Year 2- 2,500</fullName>
            </value>
            <value>
                <fullName>Year 3- 2,700</fullName>
            </value>
            <value>
                <fullName>Year 4- 2,900</fullName>
            </value>
            <value>
                <fullName>Year 5- 3,100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>