force-app/main/default/objects/Onboard_Request__c/fields/Amendment_text__c.field-meta.xml
<CustomField>
    <fullName>Amendment_text__c</fullName>
    <description>Field is used on community page to show SR Amendments</description>
    <formula>CASE(Request_Type__c, 
&apos;Increase Share Capital With New Shareholders&apos;, &apos;New shareholder&apos;, 
&apos;Share Transfer&apos;,&apos; Transfer Details&apos;,
&apos;Amendment Details&apos;)</formula>
    <label>Amendment text</label>
    <type>Text</type>
</CustomField>