force-app/main/default/objects/Onboard_Request__c/fields/Amendments_Created__c.field-meta.xml
<CustomField>
    <fullName>Amendments_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendments Created</label>
    <type>Checkbox</type>
</CustomField>