force-app/main/default/objects/Onboard_Request__c/fields/AML_Check__c.field-meta.xml
<CustomField>
    <fullName>AML_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AML Check</label>
    <type>Checkbox</type>
</CustomField>