force-app/main/default/objects/Onboard_Request__c/fields/AOA_Completed__c.field-meta.xml
<CustomField>
    <fullName>AOA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOA Completed?</label>
    <type>Checkbox</type>
</CustomField>