force-app/main/default/objects/Onboard_Request__c/fields/Applicant_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Full_Name__c</fullName>
    <description>dummy Freezone request field created to skip errors in payment page</description>
    <formula>Applicant_First_Name__c +&apos; &apos;+ Applicant_Last_Name__c</formula>
    <label>Applicant Full Name</label>
    <type>Text</type>
</CustomField>