force-app/main/default/objects/Onboard_Request__c/fields/Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type__c</fullName>
    <label>Branch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch_Type</valueSetName>
    </valueSet>
</CustomField>