force-app/main/default/objects/Onboard_Request__c/fields/Brief_Comany_Profile__c.field-meta.xml
<CustomField>
    <fullName>Brief_Comany_Profile__c</fullName>
    <label>Brief Comany Profile</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>