force-app/main/default/objects/Onboard_Request__c/fields/Brief_Entity_Details__c.field-meta.xml
<CustomField>
    <fullName>Brief_Entity_Details__c</fullName>
    <label>Brief Entity Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>