force-app/main/default/objects/Onboard_Request__c/fields/BU_Name__c.field-meta.xml
<CustomField>
    <fullName>BU_Name__c</fullName>
    <label>BU number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>