force-app/main/default/objects/Onboard_Request__c/fields/Building_Villa_Flat__c.field-meta.xml
<CustomField>
    <fullName>Building_Villa_Flat__c</fullName>
    <label>Building / Villa / Flat #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>