force-app/main/default/objects/Onboard_Request__c/fields/Business_Activities__c.field-meta.xml
<CustomField>
    <fullName>Business_Activities__c</fullName>
    <label>Business Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>