force-app/main/default/objects/Onboard_Request__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <description>This is used for initial approval</description>
    <label>Legal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DWC-LLC</fullName>
            </value>
            <value>
                <fullName>DWC-Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>