force-app/main/default/objects/Onboard_Request__c/fields/Business_Entity_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Arabic__c</fullName>
    <formula>case(
text(Business_Entity__c),
&quot;DWC-LLC&quot;,&quot;دي دبليو سي - ش.ذ.م.م&quot;,
&quot;DWC-Branch&quot;,&quot;دي دبليو سي - فرع&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Type Arabic</label>
    <type>Text</type>
</CustomField>