force-app/main/default/objects/Onboard_Request__c/fields/Card_Access_Duration__c.field-meta.xml
<CustomField>
    <fullName>Card_Access_Duration__c</fullName>
    <label>Card Access Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>