force-app/main/default/objects/Onboard_Request__c/fields/Card_Applicant_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Applicant_Company_Name__c</fullName>
    <label>Card Applicant Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>