force-app/main/default/objects/Onboard_Request__c/fields/Card_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Card_Applicant_Email__c</fullName>
    <label>Card Applicant Email</label>
    <type>Email</type>
</CustomField>