force-app/main/default/objects/Onboard_Request__c/fields/Card_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiry_Date__c</fullName>
    <label>Establishment Card Expiry Date</label>
    <type>Date</type>
</CustomField>