force-app/main/default/objects/Onboard_Request__c/fields/Card_Holder_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_First_Name__c</fullName>
    <label>Card Holder First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>