force-app/main/default/objects/Onboard_Request__c/fields/Card_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Issue_Date__c</fullName>
    <label>Establishment Card Issue Date</label>
    <type>Date</type>
</CustomField>