force-app/main/default/objects/Onboard_Request__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <label>Establishment Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>