force-app/main/default/objects/Onboard_Request__c/fields/Card_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Card_Sponsor__c</fullName>
    <label>Card Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>