force-app/main/default/objects/Onboard_Request__c/fields/Card_Urgent_Request__c.field-meta.xml
<CustomField>
    <fullName>Card_Urgent_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Urgent Request</label>
    <type>Checkbox</type>
</CustomField>