force-app/main/default/objects/Onboard_Request__c/fields/CID_Entry_Check__c.field-meta.xml
<CustomField>
    <fullName>CID_Entry_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CID Entry Check</label>
    <type>Checkbox</type>
</CustomField>