force-app/main/default/objects/Onboard_Request__c/fields/Commercial_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Name_Arabic__c</fullName>
    <description>Account_Name__r.Account_Arabic_Name__c</description>
    <formula>&apos;s&apos;</formula>
    <label>Current Commercial Name (Arabic)</label>
    <type>Text</type>
</CustomField>