force-app/main/default/objects/Onboard_Request__c/fields/Commercial_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Name_English__c</fullName>
    <formula>Account_Name__r.Commercial_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Commercial Name (English)</label>
    <type>Text</type>
</CustomField>