force-app/main/default/objects/Onboard_Request__c/fields/Company_Commercial_Name_Arabic_1__c.field-meta.xml
<CustomField>
    <fullName>Company_Commercial_Name_Arabic_1__c</fullName>
    <label>Company Commercial Name 1 (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>