force-app/main/default/objects/Onboard_Request__c/fields/Company_Commercial_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Company_Commercial_Name_Arabic__c</fullName>
    <label>Company Commercial Name (Arabic)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>