force-app/main/default/objects/Onboard_Request__c/fields/Company_Commercial_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Company_Commercial_Name_English__c</fullName>
    <label>Company Commercial Name (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>