force-app/main/default/objects/Onboard_Request__c/fields/Company_Exist_In_Dubai_South__c.field-meta.xml
<CustomField>
    <fullName>Company_Exist_In_Dubai_South__c</fullName>
    <label>Company Exist In Dubai South</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>