force-app/main/default/objects/Onboard_Request__c/fields/Company_Freeze_start_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Freeze_start_Date__c</fullName>
    <formula>today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Freeze start Date</label>
    <type>Date</type>
</CustomField>