force-app/main/default/objects/Onboard_Request__c/fields/Company_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Arabic__c</fullName>
    <description>Account_Name__r.Account_Arabic_Name__c</description>
    <formula>Account_Name__r.Arabic_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name (Arabic)</label>
    <type>Text</type>
</CustomField>