force-app/main/default/objects/Onboard_Request__c/fields/Company_Website_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Website_Address__c</fullName>
    <label>Company Website Address</label>
    <type>Url</type>
</CustomField>