force-app/main/default/objects/Onboard_Request__c/fields/Consent_Provided__c.field-meta.xml
<CustomField>
    <fullName>Consent_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Provided?</label>
    <type>Checkbox</type>
</CustomField>