force-app/main/default/objects/Onboard_Request__c/fields/CSCS_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>CSCS_Application_Id__c</fullName>
    <externalId>true</externalId>
    <label>CSCS Application Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>