force-app/main/default/objects/Onboard_Request__c/fields/CSCS_Partially_Approved__c.field-meta.xml
<CustomField>
    <fullName>CSCS_Partially_Approved__c</fullName>
    <label>CSCS Partially Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>