force-app/main/default/objects/Onboard_Request__c/fields/CSCS_Request_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>CSCS_Request_Source_Id__c</fullName>
    <externalId>true</externalId>
    <label>CSCS Request Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>