force-app/main/default/objects/Onboard_Request__c/fields/Current_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Company_Name__c</fullName>
    <label>Current Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>