force-app/main/default/objects/Onboard_Request__c/fields/Current_Company_Name_Ar__c.field-meta.xml
<CustomField>
    <fullName>Current_Company_Name_Ar__c</fullName>
    <label>Current Company Name -Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>