force-app/main/default/objects/Onboard_Request__c/fields/Current_Financial_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Financial_Month__c</fullName>
    <formula>CASE(DAY(Account_Name__r.What_is_your_financial_year__c),
1, &quot;1st&quot;,
2, &quot;2nd&quot;,
3, &quot;3rd&quot;,
21, &quot;21st&quot;,
22, &quot;22nd&quot;,
23, &quot;23rd&quot;,
31, &quot;31st&quot;,
TEXT(DAY(Account_Name__r.What_is_your_financial_year__c))&amp;&quot;th&quot;) &amp; &quot; &quot; &amp;
CASE(MONTH(Account_Name__r.What_is_your_financial_year__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;&quot;)</formula>
    <label>Current Financial Month</label>
    <type>Text</type>
</CustomField>