force-app/main/default/objects/Onboard_Request__c/fields/Current_Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Financial_Year__c</fullName>
    <formula>Account_Name__r.What_is_your_financial_year__c</formula>
    <label>Current Financial Year</label>
    <type>Date</type>
</CustomField>