force-app/main/default/objects/Onboard_Request__c/fields/Customer_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Arabic__c</fullName>
    <label>Customer Name(Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>