force-app/main/default/objects/Onboard_Request__c/fields/Customer_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Customer_Transactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Transactions</label>
    <referenceTo>Free_Zone_Payment__c</referenceTo>
    <relationshipName>OnBoarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>