force-app/main/default/objects/Onboard_Request__c/fields/CustomerChecked__c.field-meta.xml
<CustomField>
    <fullName>CustomerChecked__c</fullName>
    <label>CustomerChecked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>