force-app/main/default/objects/Onboard_Request__c/fields/DCAA_Activity_Required__c.field-meta.xml
<CustomField>
    <fullName>DCAA_Activity_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DCAA Activity Required?</label>
    <type>Checkbox</type>
</CustomField>