force-app/main/default/objects/Onboard_Request__c/fields/DCAA_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>DCAA_Approval_Required__c</fullName>
    <label>DCAA Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>