force-app/main/default/objects/Onboard_Request__c/fields/DCAA_Criteria_1_Match__c.field-meta.xml
<CustomField>
    <fullName>DCAA_Criteria_1_Match__c</fullName>
    <formula>OR(
ISPICKVAL(DCAA_Current_Status__c ,&apos;&apos;),
ISPICKVAL(DCAA_Current_Status__c, &apos;Missing Data in Salesforce&apos;),
ISPICKVAL(DCAA_Current_Status__c, &apos;Get Company Callout Error&apos;),
ISPICKVAL(DCAA_Current_Status__c, &apos;Wrong Response Code&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCAA Criteria 1 Match?</label>
    <type>Checkbox</type>
</CustomField>