force-app/main/default/objects/Onboard_Request__c/fields/DCAA_Criteria_2_Match__c.field-meta.xml
<CustomField>
    <fullName>DCAA_Criteria_2_Match__c</fullName>
    <formula>OR(
ISPICKVAL(DCAA_Current_Status__c ,&apos;Company Not Exists&apos;),
ISPICKVAL(DCAA_Current_Status__c, &apos;Documents upload Callout Error&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCAA Criteria 2 Match?</label>
    <type>Checkbox</type>
</CustomField>