force-app/main/default/objects/Onboard_Request__c/fields/DCAA_Criteria_3_Match__c.field-meta.xml
<CustomField>
    <fullName>DCAA_Criteria_3_Match__c</fullName>
    <formula>OR(
ISPICKVAL(DCAA_Current_Status__c ,&apos;Documents upload Success&apos;),
ISPICKVAL(DCAA_Current_Status__c, &apos;Save New Company Callout Error&apos;)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCAA Criteria 3 Match?</label>
    <type>Checkbox</type>
</CustomField>