force-app/main/default/objects/Onboard_Request__c/fields/DCAA_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>DCAA_Current_Status__c</fullName>
    <label>DCAA Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Exists</fullName>
            </value>
            <value>
                <fullName>Company Not Exists</fullName>
            </value>
            <value>
                <fullName>Documents upload Callout Error</fullName>
            </value>
            <value>
                <fullName>Documents upload Success</fullName>
            </value>
            <value>
                <fullName>Get Company Callout Error</fullName>
            </value>
            <value>
                <fullName>Missing Data in Salesforce</fullName>
            </value>
            <value>
                <fullName>Permit Issued</fullName>
            </value>
            <value>
                <fullName>Permit Request Callout Error</fullName>
            </value>
            <value>
                <fullName>Permit Request Success</fullName>
            </value>
            <value>
                <fullName>Save New Company Callout Error</fullName>
            </value>
            <value>
                <fullName>Save New Company Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>