force-app/main/default/objects/Onboard_Request__c/fields/DCAA_Email__c.field-meta.xml
<CustomField>
    <fullName>DCAA_Email__c</fullName>
    <label>DCAA Email</label>
    <type>Email</type>
</CustomField>