force-app/main/default/objects/Onboard_Request__c/fields/DCAA_NOC_Aviation__c.field-meta.xml
<CustomField>
    <fullName>DCAA_NOC_Aviation__c</fullName>
    <label>DCAA NOC (Aviation)</label>
    <type>Url</type>
</CustomField>