force-app/main/default/objects/Onboard_Request__c/fields/DCAA_Resolution_Help__c.field-meta.xml
<CustomField>
    <fullName>DCAA_Resolution_Help__c</fullName>
    <label>DCAA Resolution Help</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>