force-app/main/default/objects/Onboard_Request__c/fields/DCAA_User_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>DCAA_User_Profile_Id__c</fullName>
    <label>DCAA User Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>