force-app/main/default/objects/Onboard_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>IF ( INCLUDES ( Account_Name__r.Department__c , &quot;Dubai Logistic City&quot; ), &quot;Dubai Logistic City; &quot;,null ) &amp;
IF ( INCLUDES ( Account_Name__r.Department__c , &quot;Business Center&quot; ), &quot;Business Center;&quot;,null ) &amp;
IF ( INCLUDES ( Account_Name__r.Department__c , &quot;Business Park&quot; ), &quot;Business Park;&quot;,null ) &amp;
IF ( INCLUDES ( Account_Name__r.Department__c , &quot;DSP&quot; ), &quot;DSP; &quot;,null ) &amp; 
IF ( INCLUDES ( Account_Name__r.Department__c , &quot;Aviation City&quot; ), &quot; Aviation City;&quot;,null )</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>