force-app/main/default/objects/Onboard_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>CASE(Request_Type__c, 
&apos;Change Company Name&apos;, &apos;Change Company Name To &apos;+Proposed_company_name_1_English__c,
&apos;Change Commercial Name&apos;, &apos;Change Commercial Name To &apos;+Company_Commercial_Name_English__c,


Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>