force-app/main/default/objects/Onboard_Request__c/fields/EC_Applicable__c.field-meta.xml
<CustomField>
    <fullName>EC_Applicable__c</fullName>
    <label>EC Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>