force-app/main/default/objects/Onboard_Request__c/fields/Electricity_Maximum_Demand_KVA__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Maximum_Demand_KVA__c</fullName>
    <label>Electricity Maximum Demand (KVA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>