force-app/main/default/objects/Onboard_Request__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>EmailAddress</label>
    <type>Email</type>
</CustomField>