force-app/main/default/objects/Onboard_Request__c/fields/Establishment_Card__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Establishment Card</label>
    <referenceTo>Establishment_Card__c</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>